--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+Packages/packages-lock.json
+
+ProjectSettings/Packages/com.unity.services.core/Settings.json
+
+.idea/
